force-app/main/default/objects/fferpcore__SequenceComplete__e/fferpcore__SequenceComplete__e.object-meta.xml
<CustomObject>
    <label>Sequence Complete Event</label>
    <pluralLabel>Sequence Complete Events</pluralLabel>
</CustomObject>