force-app/main/default/objects/fferpcore__SequenceComplete__e/fields/fferpcore__IsContinuation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsContinuation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diagnostic indication that this event was generated by the request handler splitting a large completion response.</description>
    <label>Is Continuation</label>
    <type>Checkbox</type>
</CustomField>