force-app/main/default/objects/fferpcore__SequenceComplete__e/fields/fferpcore__Overflowed__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Overflowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that too many records were requested resulting in a second request being generated to perform the remainder.</description>
    <label>Overflowed</label>
    <type>Checkbox</type>
</CustomField>