force-app/main/default/objects/fferpcore__SequenceComplete__e/fields/fferpcore__SubjectIds__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SubjectIds__c</fullName>
    <description>Comma separated list or JSON array of record IDs which were sequenced.</description>
    <label>SubjectIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>